--- a/Dashboard/css/main.css
+++ b/Dashboard/css/main.css
@@ -131,7 +131,6 @@ input:focus-visible {
   width: fit-content;
   right: 0;
   cursor: pointer;
-
 }
 .loginpage .layer .form form button {
   background-color: white;
@@ -147,7 +146,7 @@ input:focus-visible {
   background-color: var(--primary-color);
   color: white;
 }
-.loginpage .layer .form form .change{
+.loginpage .layer .form form .change {
   color: var(--primary-color);
   width: fit-content;
   text-align: right;
@@ -157,11 +156,11 @@ input:focus-visible {
   position: absolute;
   right: 25px;
 }
-.loginpage .layer .form form .change:hover{
+.loginpage .layer .form form .change:hover {
   background-color: transparent;
   color: var(--primary-color);
 }
-.loginpage .layer .form form .wrong{
+.loginpage .layer .form form .wrong {
   display: block;
   text-align: center;
   width: 100%;
@@ -490,6 +489,11 @@ main header .last button:hover {
   font-size: 23px;
   position: relative;
 }
+.addPage .property-form span.success {
+  text-align: right;
+  color: rgb(21, 202, 21);
+  font-size: 25px;
+}
 .addPage .property-form h1::before {
   content: "";
   position: absolute;
@@ -508,6 +512,9 @@ main header .last button:hover {
 .addPage .property-form .form .box label {
   font-size: 16px;
   margin-bottom: 12px;
+}
+.addPage .property-form .form .box .error {
+  color: red;
 }
 .addPage .property-form .form .box input:not([type="checkbox"]) {
   font-size: 18px;
@@ -647,7 +654,8 @@ main header .last button:hover {
   font-size: 45px;
   margin-right: 10px;
 }
-.addPage .property-form .form .box #imageContainer {
+.addPage .property-form .form .box #imageContainer,
+.addPage .property-form .form .box #videoContainer {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
@@ -658,9 +666,23 @@ main header .last button:hover {
 .addPage .property-form .form .box .image-wrapper {
   position: relative;
 }
+.addPage .property-form .form .box .video-wrapper {
+  min-width: 240px;
+  position: relative;
+}
+.addPage .property-form .form .box .video-wrapper video {
+  width: 100%;
+  max-height: 130px;
+  position: absolute;
+}
 .addPage .property-form .form .box .image-wrapper img {
   width: 130px;
   height: 130px;
+  border-radius: 5px;
+}
+.addPage .property-form .form .box .image-wrapper video {
+  width: 100%;
+  height: 100%;
   border-radius: 5px;
 }
 .addPage .property-form .form .box .delete-btn {
@@ -1226,14 +1248,14 @@ main header .last button:hover {
 /* End Animations */
 
 /* All Rtl style in here */
-.loginpage .layer .form form .input-box input{
+.loginpage .layer .form form .input-box input {
   padding: 0;
   padding-right: 30px;
 }
-.loginpage .layer .form form .input-box span{
+.loginpage .layer .form form .input-box span {
   /* left: 0; */
 }
-.loginpage .layer .form form .input-box span.icon-display{
+.loginpage .layer .form form .input-box span.icon-display {
   left: 0px;
   right: unset;
 }
@@ -1296,7 +1318,7 @@ main header .last button {
   margin: 0;
   margin-right: 10px;
 }
-.addPage .property-form .form button.submit{
+.addPage .property-form .form button.submit {
   margin: 30px 20px 0 0;
 }
 .showPage .allproduct-list .box .product-details {
@@ -1326,32 +1348,32 @@ main header .last button {
   padding-left: 10px;
   border-left: 1px solid var(--border-shadow-color);
 }
-.detailsPage .details .user-data{
+.detailsPage .details .user-data {
   text-align: right;
 }
-.detailsPage .details .user-data .bottom a{
+.detailsPage .details .user-data .bottom a {
   margin-right: 0;
   margin-left: 10px;
 }
-.detailsPage .details .advice{
+.detailsPage .details .advice {
   text-align: right;
 }
-.detailsPage .details .advice > div i{
+.detailsPage .details .advice > div i {
   margin-right: 0;
   margin-left: 10px;
 }
-.detailsPage .details .user-data .top > div p span:not(:last-child){
+.detailsPage .details .user-data .top > div p span:not(:last-child) {
   border-right: 0;
   border-left: 1px solid var(--border-shadow-color);
 }
-.detailsPage .details .user-data .bottom a i{
+.detailsPage .details .user-data .bottom a i {
   margin: 0;
   margin-left: 5px;
 }
-.showPage .client-data{
+.showPage .client-data {
   text-align: right;
 }
-.showPage .client-data .id-container button{
+.showPage .client-data .id-container button {
   right: unset;
   left: 10px;
 }
@@ -1363,23 +1385,16 @@ main header .last button {
   }
 }
 
-
-
-
-
-
-
-
 /* ################################################## */
 /* test */
-.select-box{
+.select-box {
   display: none;
 }
-.box select{
+.box select {
   width: 100%;
   padding: 10px;
   border: 1px solid var(--primary-color);
 }
-.stylemap input{
+.stylemap input {
   display: none;
 }
